refacturing and restructuring frontend also adding some new components

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
-    <meta property="og:image" content="%PUBLIC_URL%/thumbnail.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="ROBOTS" content="NOINDEX, NOFOLLOW" />
+    <meta name="theme-color" content="#000000" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000" />
     <meta name="description" content="Web site created using Locofy" />
